{{$NEXT}}

- Tweaked the warning when loading a zone class from disk that was generated
  using a different Olson version than the current DateTime::TimeZone
  module. Previously, it said the loaded version was older, but all we know is
  that it's different. Reported by Karen Etheridge. RT #66097.


1.79    2014-11-11

- This release is based on version 2014j of the Olson database. This release
  only contemporary changes for Turks & Caicos.


1.78    2014-11-05

- Fix warnings from Perl 5.8.8 and before. Apparently it doesn't like when
  $SIG{__DIE__} is set to undef. Patch by Peter Rabbitson. GitHub PR #88.


1.77    2014-11-04

- Updated the mapping of Windows -> IANA time zones. Patch by David
  Pinkowitz. RT #10025.

- Replaced Class::Load with Module::Runtime, and replaced eval with Try::Tiny.


1.76    2014-10-26

- When searching for the local timezone we now look at /etc/timezone before
  /etc/localtime. The former is a much quicker check if it exists. Patch by
  Karen Etheridge. PR #3.

- The tools/parse_olson script now supports parsing the etcetera and systemv
  files. This is *not* enabled by default as it would generate zones that
  conflict with existing links for Etc/UTC and others. Patch by Alfie John. PR
  #1.


1.75    2014-09-30

- This release is based on version 2014h of the Olson database. This release
  only includes historical changes.


1.74    2014-08-30

- This release is based on version 2014g of the Olson database. This release
  includes contemporary changes for Turks & Caicos.

- Fixed a bug when trying to get the local timezone by looking at
  /etc/sysconfig/clock. Patch by Alexey Molchanov. GitHub PR #2.


1.73    2014-08-06

- This release is based on version 2014f of the Olson database. This release
  includes contemporary changes for Russia and Australia.


1.72    2014-08-03

- Added support for getting the local time zone on Android. Patch from Brian
  Fraser. RT #97711.

- The primary repo for this distro is now on GitHub.

