@@ -34,7 +34,7 @@ Test::Output = 0
 Test::Taint = 0
 
 [OSPrereqs / MSWin32]
-Win32::TieRegistry = 0
+DateTime::TimeZone::Local::Win32 = 0
 
 [OSPrereqs / hpux]
 DateTime::TimeZone::HPUX = 0
